# 3D-LIDAR-GYROSCOPE

./: .gitignore
GIT IGNORE/SOLID IGNORE/ROBOT_LIDAR_STL/: CMakeLists.txt
GIT IGNORE/SOLID IGNORE/ROBOT_LIDAR_STL/config/: joint_names_ROBOTLIDARABS.yaml
GIT IGNORE/SOLID IGNORE/ROBOT_LIDAR_STL/meshes/: ANEL_INTERIOR.STL
SIMULATIONS/: CALCULADORA_GIMBAL.py  SIMULACAO.py  UI_LIDAR.py  UI_LIDAR_2.py
SIMULATIONS/LIDAR WEBOTS SCRIPTS/: PRIMEIRO LIDAR SCRIPT FUNCIONAL.txt
SOLIDWORKS/: ANEL EXTERIOR.SLDPRT  ANEL INTERIOR.SLDPRT  BASE ANEL EXTERIOR.SLDPRT  LIDAR PLATAFORM 2.SLDPRT
WEBOTS/ROBOT_LIDAR_STL/: package.xml
WEBOTS/ROBOT_LIDAR_STL/launch/: display.launch  gazebo.launch
WEBOTS/ROBOT_LIDAR_STL/meshes/: ANEL_EXTERIOR.STL  PLATAFORMA.STL
WEBOTS/ROBOT_LIDAR_STL/urdf/: ROBOTLIDARABS.csv  ROBOTLIDARABS.urdf
WEBOTS/Simulador_Radar/controllers/my_controller/: doppler.py  doppler_detections.csv  doppler_motion.csv  kinematics.py  my_controller.py  pos.py  scan.py  scan_background.npz  scan_otimizado - Cópia.npy  scan_params.json  scan_rangemap.npz  search.py  searchDBSCAN.py  slam - Cópia (2).py  slam - Cópia (3).py  slam - Cópia.py  slam - gemini (4).py  slam.py  slam_map.npy  slam_map_icp.npy  (+2 more)
WEBOTS/Simulador_Radar/protos/: ROBOTLIDARABS.proto
WEBOTS/Simulador_Radar/worlds/: .Simular_Radar.wbproj  Simular_Radar.wbt
WEBOTS/lidar_clustering/: package.xml  setup.cfg  setup.py
WEBOTS/lidar_clustering/config/: params.yaml
WEBOTS/lidar_clustering/launch/: clustering.launch.py
WEBOTS/lidar_clustering/lidar_clustering/: clustering_node.py
